@@ -73,9 +73,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
-                <configuration>
-                    <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito-core.version}/mockito-core-${mockito-core.version}.jar -XX:+EnableDynamicAgentLoading</argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
